Commit Final - Rework em tela de login e alguns erros em users

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -41,7 +41,8 @@
                     class="text-primary text-gradient font-weight-bold">Redefinir
                     minha senha</a>
             </p>
-
+            <a asp-action="Criar" asp-controller="User" class="text-primary text-gradient font-weight-bold">Criar
+                Conta</a>
             <button type="submit" class="btn btn-primary btn-block">Entrar</button>
         </form>
     </div>
