--- a/Views/User/Criar.cshtml
+++ b/Views/User/Criar.cshtml
@@ -1,17 +1,17 @@
 @using FCX_Labs.Enums
 @model User
 @{
-    ViewData["Title"] = "Editar Cadastro";
+    Layout = "_LayoutDeslogado";
+    ViewData["Title"] = "Cadastro";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Editar Cadastro</h1>
+    <h1 class="display-4">Cadastrar usuário</h1>
 </div>
 
 
-<form asp-controller="User" asp-action="Edit" method="post">
+<form asp-controller="User" asp-action="Criar" method="post">
 
-    <input type="hidden" asp-for="id" />
     <div class="form-group">
         <label for="name" class="form-label">Nome</label>
         <input type="text" asp-for="name" class="form-control">
@@ -40,7 +40,13 @@
         @Html.ValidationMessageFor(x => x.profile)
     </div>
 
-    <button type="submit" class="btn btn-primary btn-block">Editar</button>
-    <a class="btn btn-secondary btn-block" asp-action="Index" asp-controller="Usuario" role="button">Voltar</a>
+    <div class="form-group">
+        <label for="password" class="form-label">Senha</label>
+        <input type="password" asp-for="password" class="form-control">
+        @Html.ValidationMessageFor(x => x.password)
+    </div>
+
+    <button type="submit" class="btn btn-primary btn-block">Adicionar</button>
+    <a class="btn btn-secondary btn-block" asp-action="Index" asp-controller="Home" role="button">Voltar</a>
 
 </form>
