--- a/Views/User/Criar.cshtml
+++ b/Views/User/Criar.cshtml
@@ -8,7 +8,14 @@
 <div class="text-center">
     <h1 class="display-4">Cadastrar usuário</h1>
 </div>
-
+@if (TempData["MensagemErro"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert"
+            aria-label="Close">X</button>
+        @TempData["MensagemErro"]
+    </div>
+}
 
 <form asp-controller="User" asp-action="Criar" method="post">
 
