--- a/Views/User/Editar.cshtml
+++ b/Views/User/Editar.cshtml
@@ -40,7 +40,7 @@
         @Html.ValidationMessageFor(x => x.profile)
     </div>
 
-    <button type="submit" class="btn btn-primary btn-block">Editar</button>
+    <button type="submit" class="btn btn-primary btn-block">Salvar</button>
     <a class="btn btn-secondary btn-block" asp-action="Index" asp-controller="User" role="button">Voltar</a>
 
 </form>
